# sales

./: .env.example  .gitignore  README.md  pyproject.toml
data/: persona_mappings.json
data/case_studies/: searce_case_studies.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  Layout.jsx  Modal.jsx  Pagination.jsx  SequenceTimeline.jsx  Table.jsx  ToneToggle.jsx
frontend/src/pages/: AccountDetail.jsx  Accounts.jsx  CRM.jsx  Dashboard.jsx  Decks.jsx  Messages.jsx  SequenceDetail.jsx  Sequences.jsx
src/searce_scout/: __main__.py
src/searce_scout/presentation/api/: app.py
src/searce_scout/presentation/cli/: main.py
src/searce_scout/presentation/tests/: test_api_routes.py
src/searce_scout/scout_orchestrator/agent/: scout_agent.py
src/searce_scout/scout_orchestrator/config/: dependency_injection.py  mcp_servers.json  settings.py
src/searce_scout/scout_orchestrator/workflows/: full_pipeline.py  weekly_research_batch.py
src/searce_scout/shared_kernel/: domain_event.py  errors.py  types.py  value_objects.py
src/searce_scout/shared_kernel/orchestration/: dag_orchestrator.py  pipeline.py
src/searce_scout/shared_kernel/ports/: clock_port.py  event_bus_port.py
src/searce_scout/shared_kernel/tests/: test_dag_orchestrator.py  test_pipeline.py  test_value_objects.py
tests/: conftest.py
tests/e2e/: test_scout_api.py
tests/integration/: test_full_prospect_pipeline.py  test_weekly_batch_pipeline.py
(+204 files in other folders)
