[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searce-scout"
version = "1.0.0"
description = "Autonomous AI sales agent for Searce - researches accounts, identifies stakeholders, and executes personalized multi-channel outreach"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "google-cloud-aiplatform>=1.74.0",
    "google-auth>=2.36.0",
    "google-api-python-client>=2.155.0",
    "mcp>=1.3.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
scout = "searce_scout.presentation.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/searce_scout"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
